<resources>
    <string name="app_name">NUMAD21Su-GailReneePinto</string>
    <string name="about_string">About</string>
    <string name="about_detail">Name: Gail Renee Pinto\nEmail: pinto.ga@northeastern.edu</string>
    <string name="click_here">Click here!</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="link_collector">Link Collector</string>
    <string name="insert">Insert</string>
    <string name="cancel">Cancel</string>
    <string name="locate_me">Locate Me!</string>
    <string name="location">Location</string>
    <string name="location_permission_error_string">Your app requires permission to show location!</string>
    <string name="at_your_service_string">At your service</string>
    <string name="HTTP_Status_code_message">Enter an HTTP status code</string>
    <string name="load_image_button_text">Load Image</string>
    <string name="HTTP_image_content_descriptor">Cat image for HTTP status code</string>
</resources>